# steeleye

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci_release.yml
src/steeleye/: main.py
src/steeleye/download/: main.py
src/steeleye/extract/: __init__.py  main.py
src/steeleye/transform/: main.py
tests/: int_test.py  unit_test.py
tests/extract/: test_int.py  test_unit.py
tests/transform/: test_int.py  test_unit.py
