[project]
name = "steeleye"
version = "0.1.0"
description = ""
authors = [
    {name = "mArcio-Lmano",email = "marcio.mano2322@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "steeleye", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
