[project]
name = "steeleye"
version = "0.1.0"
description = ""
authors = [{ name = "mArcio-Lmano", email = "marcio.mano.it@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests (>=2.33.1,<3.0.0)", "pandas (>=3.0.2,<4.0.0)"]

[tool.poetry]
packages = [{ include = "steeleye", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (runs real network requests)",
  "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "C"]

[dependency-groups]
dev = [
  "ruff (>=0.15.9,<0.16.0)",
  "pytest (>=9.0.2,<10.0.0)",
  "pytest-mock (>=3.15.1,<4.0.0)",
]
